from here moving to model 2

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,6 +192,12 @@
     "        \n",
     "    return conductance\n",
     "\n",
+    "def compute_pre_from_events(SET_OF_EVENTS, t):\n",
+    "    conductance = 0*t # initialized to 0\n",
+    "    for event in SET_OF_EVENTS:\n",
+    "        i0 = np.argmin((t-event)**2) # find the time point where the event falls\n",
+    "        conductance[i0] = 1\n",
+    "    return conductance\n",
     "\n",
     "def voltage_dep_NMDA(x):\n",
     "    \"\"\"\n",
