adding calib folder

--- a/Calibration_from_data.ipynb
+++ b/Calibration_from_data.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Dataset"
    ]
@@ -12,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "DATASET = {'20Hz_condition':[\\\n",
@@ -51,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os, sys\n",
@@ -66,9 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -189,9 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -230,9 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -391,9 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 325,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
@@ -468,9 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -556,9 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -620,9 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 424,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -656,9 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 426,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# toy model data\n",
@@ -692,9 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 427,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -749,17 +725,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Simulation with different parameters"
    ]
@@ -767,9 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 365,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from neural_network_dynamics import main as ntwk\n",
@@ -779,9 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 428,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -805,21 +773,13 @@
   {
    "cell_type": "code",
    "execution_count": 430,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO       No numerical integration method specified for group 'synapses', using method 'euler' (took 0.01s, trying other methods took 0.02s). [brian2.stateupdaters.base.method_choice]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "INFO       No numerical integration method specified for group 'synapses', using method 'euler' (took 0.01s, trying other methods took 0.02s). [brian2.stateupdaters.base.method_choice]\n",
       "WARNING    \"dt\" is an internal variable of group \"synapses\", but also exists in the run namespace with the value 0.1. The internal variable will be used. [brian2.groups.group.Group.resolve.resolution_conflict]\n"
      ]
     }
@@ -874,9 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 435,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -909,18 +867,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "/home/yann/anaconda3/bin/python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": null,
    "name": "python3"
   },
   "language_info": {
