--- a/Calibration_from_data.ipynb
+++ b/Calibration_from_data.ipynb
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -927,13 +927,13 @@
    "source": [
     "GRID = {'Tnmda':[65, 120],\n",
     "        'Nsyn1':[40, 100],\n",
-    "        'Nsyn2':[40, 100],\n",
+    "        'Nsyn2':[40, 80],\n",
     "        'Tnsyn':[500, 1500]}\n",
-    "Ngrid = 2\n",
-    "Nsimultaneous = 20\n",
+    "Ngrid = 5\n",
+    "Nsimultaneous = 100\n",
     "from analyz.workflow.batch_run import slurm_script, bash_script\n",
     "\n",
-    "ss = slurm_script('calib-chelated-zinc', nodes=8, partition='bigmem', mem='20G')\n",
+    "ss = slurm_script('calib-chelated-zinc', nodes=1, partition='normal', mem='10G', time='5:00:00')\n",
     "bs = bash_script('calib-chelated-zinc')\n",
     "i=0\n",
     "for Tnmda, Nsyn1, Nsyn2, Tnsyn in itertools.product(np.linspace(*GRID['Tnmda'], Ngrid),\n",
