added procedure from workflow for the passive props minimization

--- a/Calibration_from_data.ipynb
+++ b/Calibration_from_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -553,7 +553,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rm=45.89 MOhm, Cm=311.89pF\n"
+      "Rm=45.89+/-8.15 MOhm,\n",
+      "Cm=311.89+/-52.40 pF\n"
      ]
     }
    ],
@@ -568,8 +569,10 @@
     "            Rm[cond].append(PROPERTIES['Rm'][prtcl][i][cond][0])\n",
     "            Cm[cond].append(PROPERTIES['Cm'][prtcl][i][cond][0])\n",
     "            Rs[cond].append(PROPERTIES['Rs'][prtcl][i][cond][0])\n",
-    "print('Rm=%.2f MOhm, Cm=%.2fpF' % (1e-6*np.array(Rm['Control']).mean(),\n",
-    "                                   1e12*np.array(Cm['Control']).mean()))    "
+    "print('Rm=%.2f+/-%.2f MOhm,\\nCm=%.2f+/-%.2f pF' % (1e-6*np.array(Rm['Control']).mean(),\n",
+    "                                                    1e-6*np.array(Rm['Control']).std(),\n",
+    "                                                    1e12*np.array(Cm['Control']).mean(),\n",
+    "                                                    1e12*np.array(Cm['Control']).std()))    "
    ]
   },
   {
@@ -583,20 +586,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from analyz.workflow.batch_run import slurm_script, bash_script\n",
-    "ss = slurm_script('calib-passive', partition='bigmem', mem='10G', nodes=1)\n",
+    "N = 10\n",
+    "GRID = {'gl':np.linspace(0.05, 10., N),\n",
+    "        'cm':np.linspace(0.5, 2., N)}\n",
+    "np.savez(os.path.join('data', 'calib', 'passive-grid.npz'), **GRID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from analyz.workflow.batch_run import slurm_script, bash_script, GridSimulation\n",
+    "from analyz.IO.npz import load_dict\n",
+    "\n",
+    "sim = GridSimulation(os.path.join('data', 'calib', 'passive-grid.npz'))\n",
     "bs = bash_script('calib-passive')\n",
-    "instruct = 'python passive_props.py calib 45.89 311.89 30'\n",
-    "ss.append_instruction(instruct)\n",
-    "bs.append_instruction(instruct)\n",
-    "ss.write(folder='./batch/')\n",
-    "bs.write(folder='./bash/')"
+    "bs.script = sim.build_script('python passive_props.py calib', base_script=bs.script)\n",
+    "bs.write(folder='./bash/')\n"
    ]
   },
   {
@@ -1746,15 +1763,14 @@
       "[1 0 0 2 0]\n",
       "alphaZn_0.4--tauRiseZn_1.00--tauDecayZn_20.00--Deltax0_0--deltax_0\n",
       "193 ) 0.43333333333333335 1.0 20.000000000000004 0.5 0.1\n",
-      "[1 0 0 2 1]\n",
-      "alphaZn_0.4--tauRiseZn_1.00--tauDecayZn_20.00--Deltax0_0--deltax_0"
+      "[1 0 0 2 1]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "alphaZn_0.4--tauRiseZn_1.00--tauDecayZn_20.00--Deltax0_0--deltax_0\n",
       "194 ) 0.43333333333333335 1.0 20.000000000000004 0.5 0.15000000000000002\n",
       "[1 0 0 2 2]\n",
       "alphaZn_0.4--tauRiseZn_1.00--tauDecayZn_20.00--Deltax0_0--deltax_0\n",
@@ -2268,15 +2284,14 @@
       "364 ) 0.5666666666666667 1.0 20.000000000000004 0.3 0.25\n",
       "[2 0 0 0 4]\n",
       "alphaZn_0.6--tauRiseZn_1.00--tauDecayZn_20.00--Deltax0_0--deltax_0\n",
-      "365 ) 0.5666666666666667 1.0 20.000000000000004 0.3 0.3\n",
-      "[2 0 0 0 5]"
+      "365 ) 0.5666666666666667 1.0 20.000000000000004 0.3 0.3\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "[2 0 0 0 5]\n",
       "alphaZn_0.6--tauRiseZn_1.00--tauDecayZn_20.00--Deltax0_0--deltax_0\n",
       "366 ) 0.5666666666666667 1.0 20.000000000000004 0.39999999999999997 0.05\n",
       "[2 0 0 1 0]\n",
@@ -2627,15 +2642,14 @@
       "[2 2 0 0 1]\n",
       "alphaZn_0.6--tauRiseZn_40.00--tauDecayZn_20.00--Deltax0_0--deltax_0\n",
       "482 ) 0.5666666666666667 40.000000000000014 20.000000000000004 0.3 0.15000000000000002\n",
-      "[2 2 0 0 2]\n",
-      "alphaZn_0.6--tauRiseZn_40.00--tauDecayZn_20.00--Deltax0_0--deltax_0"
+      "[2 2 0 0 2]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "alphaZn_0.6--tauRiseZn_40.00--tauDecayZn_20.00--Deltax0_0--deltax_0\n",
       "483 ) 0.5666666666666667 40.000000000000014 20.000000000000004 0.3 0.2\n",
       "[2 2 0 0 3]\n",
       "alphaZn_0.6--tauRiseZn_40.00--tauDecayZn_20.00--Deltax0_0--deltax_0\n",
@@ -3290,15 +3304,14 @@
       "700 ) 0.7 40.000000000000014 499.99999999999994 0.39999999999999997 0.25\n",
       "[3 2 1 1 4]\n",
       "alphaZn_0.7--tauRiseZn_40.00--tauDecayZn_500.00--Deltax0_0--deltax_0\n",
-      "701 ) 0.7 40.000000000000014 499.99999999999994 0.39999999999999997 0.3\n",
-      "[3 2 1 1 5]"
+      "701 ) 0.7 40.000000000000014 499.99999999999994 0.39999999999999997 0.3\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "[3 2 1 1 5]\n",
       "alphaZn_0.7--tauRiseZn_40.00--tauDecayZn_500.00--Deltax0_0--deltax_0\n",
       "702 ) 0.7 40.000000000000014 499.99999999999994 0.5 0.05\n",
       "[3 2 1 2 0]\n",
