adding the full bash script

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,7 +6,16 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO       Cache size for target \"cython\": 1226 MB.\n",
+      "You can call \"clear_cache('cython')\" to delete all files from the cache or manually delete files in the \"/home/yann/.cython/brian_extensions\" directory. [brian2]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from neural_network_dynamics import main as ntwk\n",
