adding syn input folder

--- a/Calibration_from_data.ipynb
+++ b/Calibration_from_data.ipynb
@@ -2,59 +2,55 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Dataset"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Runs for parameter calibration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "N = 30\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from analyz.workflow.batch_run import GridSimulation, bash_script\n",
+    "\n",
+    "N = 2# 30\n",
     "GRID = {'gL':np.linspace(0.1, 10., N),\n",
     "        'cm':np.linspace(0.5, 2., N)}\n",
     "\n",
     "np.savez(os.path.join('data', 'calib', 'passive-grid.npz'), **GRID)\n",
-    "\n",
     "# Making a bash script to run a scan on the above grid grid\n",
-    "sim = GridSimulation(GRID) # os.path.join('data', 'calib', 'passive-grid.npz'))\n",
+    "sim = GridSimulation(GRID)\n",
     "bs = bash_script('calib-passive')\n",
     "bs.script = sim.build_script('python passive_props.py calib',\n",
     "                             base_script=bs.script, simultaneous_runs=8)\n",
     "bs.write(folder='./bash/')\n",
     "\n",
-    "N= 10\n",
+    "N= 2# 10\n",
     "GRID = {'tauDecayNMDA':np.linspace(65, 120, N),\n",
     "        'Nsyn1':np.linspace(5, 50, N, dtype=int),\n",
     "        'Nsyn2':np.linspace(5, 50, N, dtype=int),\n",
     "        'Tnsyn':np.linspace(100, 2000, N)}\n",
     "\n",
     "np.savez(os.path.join('data', 'calib', 'chelated-zinc-calib-grid.npz'), **GRID)\n",
-    "\n",
     "# Making a bash script to run a scan on the above grid grid\n",
-    "sim = GridSimulation(GRID) # os.path.join('data', 'calib', 'passive-grid.npz'))\n",
+    "sim = GridSimulation(GRID)\n",
     "bs = bash_script('calib-chelated-zinc')\n",
     "bs.script = sim.build_script('python calibration-runs.py chelated-zinc-calib',\n",
     "                             base_script=bs.script, simultaneous_runs=3*8)\n",
     "bs.write(folder='./bash/')\n",
     "\n",
-    "Ngrid= 8\n",
+    "Ngrid= 2# 8\n",
     "GRID = {'alphaZn': np.linspace(0.3, 0.7, Ngrid),\n",
     "        'tauRiseZn':np.logspace(np.log10(1), np.log10(40), Ngrid),\n",
     "        'tauDecayZn':np.logspace(np.log10(20), np.log10(500), Ngrid),\n",
@@ -68,14 +64,12 @@
     "bs = bash_script('calib-free-zinc')\n",
     "bs.script = sim.build_script('python calibration-runs.py free-zinc-calib',\n",
     "                             base_script=bs.script, simultaneous_runs=3*8)\n",
-    "bs.write(folder='./bash/')\n"
+    "bs.write(folder='./bash/')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Dataset"
    ]
@@ -83,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "DATASET = {'20Hz_protocol':[\\\n",
@@ -134,9 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os, sys\n",
@@ -150,9 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -263,9 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Importing electrophy/intracellular module\n",
@@ -277,9 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -557,9 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Passive properties"
    ]
@@ -567,9 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -624,9 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -659,18 +637,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Finding the passive props in the model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Run a large grid a values"
    ]
@@ -678,9 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -692,9 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "N = 2 # 30\n",
@@ -713,9 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Least square fitting of data"
    ]
@@ -723,9 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -743,9 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -753,13 +717,7 @@
      "text": [
       "WARNING    /home/yann/work/cortical-physio-icm/electrophy/intracellular/passive_props.py:71: RuntimeWarning: overflow encountered in exp\n",
       "  heaviside(t, t1)*VbslShift*np.exp(-(t-t1)/Tau)\n",
-      " [py.warnings]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " [py.warnings]\n",
       "WARNING    /home/yann/work/cortical-physio-icm/electrophy/intracellular/passive_props.py:71: RuntimeWarning: invalid value encountered in multiply\n",
       "  heaviside(t, t1)*VbslShift*np.exp(-(t-t1)/Tau)\n",
       " [py.warnings]\n"
@@ -787,9 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -842,18 +798,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Calibrating Zinc-NMDA properties on Extracellular stimulation data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Extracellular stimulation data: 3Hz and 20hz "
    ]
@@ -861,9 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1022,9 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compute_norm_trace(data,\n",
@@ -1083,9 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1171,9 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1235,9 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "FDATA = {}\n",
@@ -1271,9 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Minimation procedure"
    ]
@@ -1281,9 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# toy model data\n",
@@ -1310,9 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from datavyz import gedn as ge"
@@ -1321,9 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -1353,9 +1287,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Perform calibration on Tricine case: chelated Zinc"
    ]
@@ -1363,9 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -1375,9 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "N=8\n",
@@ -1398,9 +1326,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Find minimum"
    ]
@@ -1408,9 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1464,9 +1388,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Calibration results: chelated-Zinc"
    ]
@@ -1474,9 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1495,18 +1415,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Perform calibration on control case: free-Zinc"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Run the different parameters"
    ]
@@ -1514,9 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import itertools, os\n",
@@ -1542,9 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Find minimum"
    ]
@@ -1552,9 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from analyz.IO.npz import load_dict as npz_load\n",
@@ -1604,9 +1514,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Minimization output"
    ]
@@ -1614,9 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from datavyz import gedn as ge\n",
@@ -1626,9 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1652,9 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1696,9 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1750,9 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1854,18 +1752,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "/home/yann/anaconda3/bin/python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": null,
    "name": "python3"
   },
   "language_info": {
