--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,7 +11,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO       Cache size for target \"cython\": 1226 MB.\n",
+      "INFO       Cache size for target \"cython\": 1336 MB.\n",
       "You can call \"clear_cache('cython')\" to delete all files from the cache or manually delete files in the \"/home/yann/.cython/brian_extensions\" directory. [brian2]\n"
      ]
     }
@@ -29,7 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from spike_threshold import compute_branches_for_stimuli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -51,47 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "segments_of_branches = compute_branches_for_stimuli(SEGMENTS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91\n",
-      "  92  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107 108 109\n",
-      " 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127\n",
-      " 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145\n",
-      " 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163\n",
-      " 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181\n",
-      " 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198]\n",
-      "[111 134  83 105 169  99  81 171 140 172]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(SEGMENTS['index'][segments_of_branches[0]])\n",
-    "print(np.random.choice(segments_of_branches[0], 10, replace=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -122,6 +104,31 @@
     "for d, sb in enumerate(segments_of_branches):\n",
     "    vis.plot_segments(sb, color=ge.colors[d%10], ax=ax, bar_scale_args={})\n",
     "print(len(segments_of_branches))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "from analyz.workflow.batch_run import GridSimulation, bash_script\n",
+    "\n",
+    "GRID = {'qNMDA':np.array([0,0.5]),\n",
+    "        'Deltax0':np.array([0,0.5]),\n",
+    "        'branch_index':np.arange(10)}\n",
+    "\n",
+    "np.savez(os.path.join('data', 'syn-input', 'spike-threshold.npz'), **GRID)\n",
+    "# Making a bash script to run a scan on the above grid grid\n",
+    "sim = GridSimulation(GRID)\n",
+    "bs = bash_script('syn-input-threshold')\n",
+    "bs.script = sim.build_script('python passive_props.py syn-input 5 1000 10',\n",
+    "                             base_script=bs.script, simultaneous_runs=8)\n",
+    "bs.write(folder='./bash/')\n"
    ]
   },
   {
