--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": 650,
    "metadata": {
     "collapsed": false
    },
@@ -481,7 +481,7 @@
     "                     X=[[-35, 85], [30], [30]],\n",
     "                     Y=[[20, 0], [150], [250]],\n",
     "                     width='one-and-a-half-column',\n",
-    "                     height=130, grid=True,\n",
+    "                     height=125, grid=False,\n",
     "                     fig_name='figures/fig-model-prediction.png')"
    ]
   },
