test with script

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -51,9 +51,9 @@
     "\n",
     "GRID = {'qNMDA':np.array([0,0.5]),\n",
     "        'Deltax0':np.array([0, 0.5]),\n",
-    "        'Fexc_bg':np.array([0, 2., 5., 7.]),\n",
-    "        'seed':np.arange(20),\n",
-    "        'branch_index':np.arange(27)}\n",
+    "        'Fexc_bg':np.array([0, 0.2, 1.]),\n",
+    "        'seed':np.arange(2),\n",
+    "        'branch_index':np.arange(2)} # 27\n",
     "\n",
     "np.savez(os.path.join('data', 'syn-input', 'spike-threshold-grid.npz'), **GRID)\n",
     "sim = GridSimulation(GRID)\n",
